--- a/RealWorldFSharp.Api/RealWorldFSharp.Api.fsproj
+++ b/RealWorldFSharp.Api/RealWorldFSharp.Api.fsproj
@@ -5,8 +5,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Common.fs" />
-        <Compile Include="Domain\Users.fs" />
         <Compile Include="Configuration.fs" />
         <Compile Include="DataAccess.fs" />
         <Compile Include="Models.fs" />
@@ -42,6 +40,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\RealWorldFSharp.Common\RealWorldFSharp.Common.fsproj" />
+      <ProjectReference Include="..\RealWorldFSharp.Domain\RealWorldFSharp.Domain.fsproj" />
       <ProjectReference Include="..\RealWorldFSharp\RealWorldFSharp.fsproj" />
     </ItemGroup>
 
