--- a/RealWorldFSharp.Api/RealWorldFSharp.Api.fsproj
+++ b/RealWorldFSharp.Api/RealWorldFSharp.Api.fsproj
@@ -17,6 +17,8 @@
         <Compile Include="Workflows\UnfollowUser.fs" />
         <Compile Include="Workflows\CreateArticle.fs" />
         <Compile Include="Workflows\GetArticle.fs" />
+        <Compile Include="Workflows\DeleteArticle.fs" />
+        <Compile Include="Workflows\UpdateArticle.fs" />
         <Compile Include="Controllers\UserRegistrationController.fs" />
         <Compile Include="Controllers\UserAuthenticationController.fs" />
         <Compile Include="Controllers\UserController.fs" />
