--- a/RealWorldFSharp.Api/RealWorldFSharp.Api.fsproj
+++ b/RealWorldFSharp.Api/RealWorldFSharp.Api.fsproj
@@ -8,6 +8,7 @@
         <Compile Include="Configuration.fs" />
         <Compile Include="Authentication.fs" />
         <Compile Include="Http.fs" />
+        <Compile Include="Workflows\Helper.fs" />
         <Compile Include="Workflows\RegisterNewUser.fs" />
         <Compile Include="Workflows\AuthenticateUser.fs" />
         <Compile Include="Workflows\RetrieveUser.fs" />
