--- a/RealWorldFSharp.Api/RealWorldFSharp.Api.fsproj
+++ b/RealWorldFSharp.Api/RealWorldFSharp.Api.fsproj
@@ -21,6 +21,7 @@
         <Compile Include="Workflows\DeleteArticle.fs" />
         <Compile Include="Workflows\UpdateArticle.fs" />
         <Compile Include="Workflows\AddComment.fs" />
+        <Compile Include="Workflows\GetComments.fs" />
         <Compile Include="Controllers\UserRegistrationController.fs" />
         <Compile Include="Controllers\UserAuthenticationController.fs" />
         <Compile Include="Controllers\UserController.fs" />
@@ -30,6 +31,7 @@
         <Folder Include="Middleware" />
         <Compile Include="Startup.fs" />
         <Compile Include="Program.fs" />
+        <Content Include="TODO.txt" />
 
     </ItemGroup>
 
