--- a/RealWorldFSharp.Api/appsettings.json
+++ b/RealWorldFSharp.Api/appsettings.json
@@ -10,5 +10,6 @@
     "Issuer": "realworld-web-api",
     "Audience": "*",
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
-  }
+  },
+  "ConnectionString": "server=.\\SQLEXPRESS;database=RealWorldFSharp;Integrated security=SSPI"
 }
