--- a/RealWorldFSharp.Api/appsettings.json
+++ b/RealWorldFSharp.Api/appsettings.json
@@ -11,5 +11,7 @@
     "Audience": "*",
     "Secret": "THIS IS USED TO SIGN AND VERIFY JWT TOKENS, REPLACE IT WITH YOUR OWN SECRET, IT CAN BE ANY STRING"
   },
-  "ConnectionString": "server=.\\SQLEXPRESS;database=RealWorldFSharp;Integrated security=SSPI"
+  "Database": {
+    "ConnectionString": "server=.\\SQLEXPRESS;database=RealWorldFSharp;Integrated security=SSPI"
+  } 
 }
