--- a/RealWorldFSharp.Data/RealWorldFSharp.Data.fsproj
+++ b/RealWorldFSharp.Data/RealWorldFSharp.Data.fsproj
@@ -24,6 +24,8 @@
       <PackageReference Include="FsToolkit.ErrorHandling" Version="1.2.5" />
       <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="3.1.0" />
+      <PackageReference Include="System.Data.SqlClient" Version="4.8.0" />
+      <PackageReference Include="SQLProvider" Version="1.1.73" />
     </ItemGroup>
 
 </Project>
